server/kubernetes/deployment-sensor-server-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sensor-server-db
  labels:
    name: sensor-server-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: sensor-server-db
    spec:
      containers:
        - image:  mysql
          name: sensor-server-db
          args:
            - "--ignore-db-dir=lost+found" #note this property didn't work on mysql 8 => now using 5.7.x version of mysql         
          ports:
            - containerPort:  3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          imagePullPolicy: Always
      volumes:
        - name: mysql-persistent-storage
          gcePersistentDisk:
            pdName: mysql-disk
            fsType: ext4
