server/kubernetes/deployment-sensor-server-process.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sensor-server-process
  labels:
    name: sensor-server-process
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: sensor-server-process
    spec:
      containers:
        - image:  index.docker.io/kroonprins/sensor-server-process
          name: sensor-server-process
          imagePullPolicy: Always
