server/kubernetes/deployment-sensor-server-receive.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sensor-server-receive
  labels:
    name: sensor-server-receive
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: sensor-server-receive
    spec:
      containers:
        - image:  index.docker.io/kroonprins/sensor-server-receive
          name: sensor-server-receive       
          ports:
            - containerPort:  8080
          imagePullPolicy: Always
