server/kubernetes/deployment-sensor-server-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sensor-server-web
  labels:
    name: sensor-server-web
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: sensor-server-web
    spec:
      containers:
      - image:  index.docker.io/kroonprins/sensor-server-web
        name: sensor-server-web
        # resources:
        #   requests:
        #     cpu: "20m"
        #     memory: "55M"
        # livenessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 5000
        #   initialDelaySeconds: 90
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 5000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        # env:
        # - name:  ENVVARNAME
        #   value:  ENVVARVALUE    
        ports:
        - containerPort:  8081
          #name: sensor-server-web
        volumeMounts:
        - mountPath: /data
          name: data
        imagePullPolicy: Always
      volumes:
        - name: data
          emptyDir: {}
      restartPolicy: Always
