server/kubernetes/service-sensor-server-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: sensor-server-db
spec:
  selector:
    name:  sensor-server-db
  type:  ClusterIP
  ports:
  - port:  3306
    targetPort:  3306
    protocol: TCP
