server/kubernetes/ingress-sensor-server-receive.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensor-server-receive
spec:
  backend:
    serviceName: sensor-server-receive
    servicePort: 8080
