server/kubernetes/ingress-sensor-server-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensor-server-web
spec:
  backend:
    serviceName: sensor-server-web
    servicePort: 8081
